20-kuber/HW5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-net
spec:
  ports:
    - name: nginx
      port: 9001
      protocol: TCP
      targetPort: 80
    - name: multitool
      port: 9002
      protocol: TCP
      targetPort: 8080
  selector:
    app: nt_app
