20-kuber/HW5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nt-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: my-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netology-net
                port:
                  number: 9001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: netology-net
                port:
                  number: 9002
